Closed
Bug 128177
Opened 24 years ago
Closed 24 years ago
[FIX]Gzipped postscript files unzipped when saved but extension left as .ps.gz
Categories
(Core Graveyard :: File Handling, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.9
People
(Reporter: greenrd, Assigned: bzbarsky)
References
()
Details
Attachments
(1 file)
|
4.65 KB,
patch
|
bbaetz
:
review+
darin.moz
:
superreview+
shaver
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.8+) Gecko/20020227
BuildID: 2002022700
Gzipped postscript files are transparently ungzipped when downloaded, but the
file extension is not changed from .ps.gz to .ps. This applies to postscript
files but not e.g. tar files.
Reproducible: Always
Steps to Reproduce:
1. Disable any handler apps for postscript
2. Go to URL above
3. Choose Save
Actual Results: File saved as n843.ps.gz, but it has been gunzipped by mozilla.
Expected Results: File should be saved as n843.ps.gz and should be still
gzipped up.
Comment 1•24 years ago
|
||
Should be fixed by the checkin to bug 69306. see bug 121001. Can you try a
later build? That build ID looks like a self built Moz, which might not have
picked up the patch...
| Assignee | ||
Comment 2•24 years ago
|
||
No, this is _caused_ by the fix for bug 69306. I _thought_ I should have added
postscript to the ban list....
Taking bug.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P1
Target Milestone: --- → mozilla0.9.9
| Assignee | ||
Comment 4•24 years ago
|
||
So... the site sends the file as application/x-gunzip. The patch adds that to
the nsHttpChannel "apache is broken" logic and adds postscript to the list of
types not to decode (a good idea anyway, imo).
Comment 5•24 years ago
|
||
Comment on attachment 71815 [details] [diff] [review]
Proposed fix
x-gunzip? Who comes up with these?
r=bbaetz
Attachment #71815 -
Flags: review+
Comment 6•24 years ago
|
||
Comment on attachment 71815 [details] [diff] [review]
Proposed fix
sr=darin
Attachment #71815 -
Flags: superreview+
| Assignee | ||
Updated•24 years ago
|
Summary: Gzipped postscript files unzipped when saved but extension left as .ps.gz → [FIX]Gzipped postscript files unzipped when saved but extension left as .ps.gz
Comment 7•24 years ago
|
||
Comment on attachment 71815 [details] [diff] [review]
Proposed fix
a=shaver for 0.9.9.
Attachment #71815 -
Flags: approval+
| Assignee | ||
Comment 8•24 years ago
|
||
fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 9•24 years ago
|
||
To be clear, this was checked in for 0.9.9, pre-branch.
Comment 10•24 years ago
|
||
vrfy'd fixed using test case in comment 0 (linux rh7.2, 2002.07.23.06-1.0).
Status: RESOLVED → VERIFIED
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•