Make us handle type:application/x-gunzip, encoding:gzip.  Bug 128177, r=bbaetz, sr=darin, a=shaver